Fix reader css img too high

--- a/src/index.less
+++ b/src/index.less
@@ -21,6 +21,7 @@
 
 .cleanrss-reader img {
   max-width: 100%;
+  height: auto;
   object-fit: contain;
 }
 
